# veillib

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  vcpkg.json
include/: lib.hpp  veil.hpp
include/veil/: assets.hpp  cacheassistant.hpp  cachemgr.hpp  glcamera.hpp  glrenderer.hpp  logmgr.hpp  math.hpp  mesh.hpp  model.hpp  shader.hpp  window.hpp
src/lib/: assets.cpp  cachemgr.cpp  glcamera.cpp  glrenderer.cpp  lib.cpp  logmgr.cpp  mesh.cpp  model.cpp  shader.cpp  window.cpp
src/shader/: basic.frag  basic.vert
